Fixes bugs in issue #86
Fixes all layout issues mentioned in #86

--- a/midnight/css/base.css
+++ b/midnight/css/base.css
@@ -10692,3 +10692,13 @@ header + .peopleListItem-2nzedh {
 .plugin-settings .titleDefault-a8-ZSr {
 	font-size:var(--size2);
 }
+
+/*Bug fixes thanks to fluffapparition
+**The code block below fixes many overlapping issues*/
+#app-mount > div.app-1q1i1E.da-app > div > div.layers-3iHuyZ.da-layers.layers-3q14ss.da-layers > div > div > div > div > div.chat-3bRxxu.da-chat > div > div
+{margin-top:150px;}/*Fixed member list going underneath the topnav*/
+h2.da-membersGroup{overflow:visible visible;z-index:1000;}/*fixed text being cut off*/
+#private-channels-4{z-index: 1000;}/*fixed the second user in dms being incorrectly sized when the first user is selected*/
+#app-mount > div.app-1q1i1E.da-app > div > div.layers-3iHuyZ.da-layers.layers-3q14ss.da-layers > div > div > div > div > div.chat-3bRxxu.da-chat > div > div
+{margin-bottom:20px;border:none;}.da-members{padding-bottom:0px;}/*The 320px padding causes the scroller to scroll WAY too far. Instead we want to push the top of the memberswrap up. This avoids collision with the bottom message bar. border:none; fixes the bright square that appears to the right*/
+#app-mount .guilds-1SWlCJ {margin-top: 0px;}/*not a bug fix, just cleans up the ui a bit*/
